# led_lamp

./: .gitignore  .gitmodules  README.md
fw/: CMakeLists.txt  abort.c  adc.c  adc.h  adc_blinker_main.c  adc_filter.h  alarm.c  alarm.h  alarmist_main.c  blinker.c  blinker.h  blinker_main.c  break.h  button.c  button.h  clocks_etc.c  clocks_etc.h  debouncer.c  debouncer.h  debug.c  debug.h  deep_sleeper_main.c  event.h  func.h  lamp_main.c  lamp_parameters.h  loop.c  loop.h  macro_utils.h  pwm.c  pwm.h  sleeper_main.c  stack_check.c  timers.c  timers.h  toolchain_gcc_avr.cmake  vcc_monitor.c  vcc_monitor.h
fw/adc_blinker/: CMakeLists.txt  custom_parameters.h  event_list.h  main.c
fw/alarmist/: CMakeLists.txt  custom_parameters.h  debug_event_ids.h  event_list.h  main.c
fw/blinker/: CMakeLists.txt  custom_parameters.h  event_list.h  main.c
fw/deep_sleeper/: CMakeLists.txt  custom_parameters.h  debug_event_ids.h  event_list.h  main.c
fw/lamp/: CMakeLists.txt  custom_parameters.h  debug_event_ids.h  event_list.h  main.c
fw/lib/: abort.c  adc.c  adc.h  adc_filter.c  adc_filter.h  assert_.h  blinker.c  blinker.h  button.c  button.h  clocks_etc.c  clocks_etc.h  debouncer.c  debouncer.h  debug.c  debug.h  default_debug_event_ids.h  event.h  event_queue.c  event_queue.h  loop.c  loop.h  macro_utils.h  panic.c  panic.h  parameters.h  pwm.c  pwm.h  pwm_animator.c  pwm_animator.h  stack_check.c  stack_check.h  sys_time.c  sys_time.h  timer_list.c  timer_list.h  timers.c  timers.h  vcc_monitor.c
fw/sleeper/: CMakeLists.txt  main.c
fw/tests_host/: CMakeLists.txt  panic.c  test_timer_list.c
hw/pcb/v1/: led_lamp-cache.lib  led_lamp.sch
hw/pcb/v1/base/: base-cache.lib  base.kicad_pcb  base.net  base.sch  fp-lib-table
hw/pcb/v1/head/: head.kicad_pcb  head.net  head.sch
hw/pcb/v1/lib/: led_lamp.dcm  led_lamp.lib
hw/pcb/v2/: fp-lib-table  led_lamp.pro  sym-lib-table
hw/pcb/v2/base/: base-cache.lib  base.kicad_pcb  base.net  base.pro  base.sch  fp-info-cache
hw/pcb/v2/head/: head-cache.lib  head.pro
hw/pcb/v2/lib/: led_lamp.lib
hw/pcb/v2/lib/led_lamp.pretty/: SW_SPST_UNKNOWN.kicad_mod  SolderWirePad_1x01_SMD_1x2mm.kicad_mod  SolderWirePad_1x04_SMD_1x2mm.kicad_mod
hw/pcb/v3/: fp-info-cache  led_lamp-cache.lib  led_lamp.pro  led_lamp.sch  sym-lib-table
hw/pcb/v3/base/: base-cache.lib  base.kicad_pcb  base.net  base.pro  base.sch  fp-info-cache
hw/pcb/v3/head/: fp-info-cache  head-cache.lib  head.sch  sym-lib-table
hw/pcb/v3/lib/: led_lamp.dcm  led_lamp.lib  power.lib
hw/pcb/v3/lib/led_lamp.pretty/: SolderWirePad_1x02_SMD_1x2mm.kicad_mod  SolderWirePad_1x03_SMD_1x2mm.kicad_mod
